<resources>
    <string name="app_name">FMGordillo</string>
    <string name="back">Volver</string>
    <!-- SPLASH SCREEN -->
    <string name="splash_txt_1">Bienvenidos a mi app</string>
    <!-- LOGIN -->
    <string name="login_btn_accept">Login</string>
    <string name="login_field_user">Nombre de usuario</string>
    <string name="login_field_pw">Contraseña</string>
    <!-- MENU - TAB 1 -->
    <string name="menu_changeColor_btn">Cambiar color</string>
    <string name="menu_sharedPreferences_btn">Preferencias compartidas</string>
    <string name="menu_settings_btn">Settings</string>
    <string name="tabs_2_abm">ABMC de Usuarios</string>
    <!-- TAB 1 -->
    <string name="tabs_1_color_btn_changecolor">Haceme clic y cambio el fondo</string>
    <string name="menu_changeColorDefault">Reset</string>
    <!-- TAB 2 -->
    <string name="tabs_2_abm_insert_details">Ingrese el codigo y nombre del nuevo usuario, y haga clic en el boton</string>
    <string name="tabs_2_abm_insert_btn">Insertar</string>
    <string name="tabs_2_abm_update_btn">Actualizar</string>
    <string name="tabs_2_abm_delete_btn">Eliminar</string>
    <string name="tabs_2_abm_code">Codigo</string>
    <string name="tabs_2_abm_username">Nombre</string>
    <string name="tabs_2_abm_notification_OK">El registro ha sido</string>
    <string name="tabs_2_abm_notification_ERR">ERROR:</string>
    <string name="onInsert">insertado exitosamente</string>
    <string name="onUpdate">actualizado exitosamente</string>
    <string name="onDelete">eliminado exitosamente</string>
    <string name="tabs_2_abm_rowsHint">Datos vacios</string>
    <!-- TAB 3 -->
    <string name="menu_changeSettings_btn">Configuracion</string>
</resources>
